[gd_scene load_steps=3 format=3 uid="uid://bf84bp4uegbfp"]

[ext_resource type="Script" path="res://scripts/multiplayer_controller.gd" id="1_hsel5"]
[ext_resource type="Script" path="res://scripts/my_ip_addr.gd" id="2_xgt24"]

[node name="MultiplayerController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hsel5")

[node name="UsernameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 108.0
offset_right = 275.0
offset_bottom = 134.0
text = "Username
"

[node name="Username" type="LineEdit" parent="UsernameLabel"]
layout_mode = 0
offset_left = 92.0
offset_top = -3.0
offset_right = 280.0
offset_bottom = 28.0
caret_blink = true

[node name="IPAddressLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 154.0
offset_right = 280.0
offset_bottom = 180.0
text = "IP Address"

[node name="IPAddress" type="LineEdit" parent="IPAddressLabel"]
layout_mode = 0
offset_left = 92.0
offset_top = -3.0
offset_right = 279.0
offset_bottom = 28.0
text = "192.168.18.1"
caret_blink = true

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 636.0
offset_top = 149.0
offset_right = 783.0
offset_bottom = 185.0
text = "Join Server
"

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 637.0
offset_top = 102.0
offset_right = 784.0
offset_bottom = 137.0
text = "Host Game
"

[node name="HostingStatus" type="Label" parent="HostButton"]
layout_mode = 0
offset_left = -615.0
offset_top = -72.0
offset_right = 301.0
offset_bottom = -42.0
horizontal_alignment = 1
justification_flags = 162

[node name="StartGameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 636.0
offset_top = 397.0
offset_right = 783.0
offset_bottom = 468.0
text = "Start Game"

[node name="GameVersionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 504.0
offset_right = 950.0
offset_bottom = 530.0
text = "Version 0.1"

[node name="MyIPAddressLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 500.0
offset_right = 112.0
offset_bottom = 526.0
text = "192.168.1.18"
script = ExtResource("2_xgt24")

[node name="LobbyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 223.0
offset_right = 236.0
offset_bottom = 249.0

[node name="LobbyInfo" type="RichTextLabel" parent="LobbyLabel"]
layout_mode = 0
offset_top = 30.0
offset_right = 328.0
offset_bottom = 241.0

[node name="WinnerButton" type="Button" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -4.0
offset_right = 959.0
offset_bottom = 540.0

[node name="Timer" type="Timer" parent="WinnerButton"]
wait_time = 3.0

[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="button_down" from="HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="StartGameButton" to="." method="_on_start_game_button_button_down"]
